--- a/pom.xml
+++ b/pom.xml
@@ -14,19 +14,19 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <testng.configs.path>${project.build.testOutputDirectory}/com/epam/training/center/lesson04/</testng.configs.path>
-    <testng.suite.file>${testng.configs.path}/lesson4.class.suite.xml</testng.suite.file>
+    <suite.xml.name>${testng.configs.path}/lesson4.class.suite.xml</suite.xml.name>
 
     <checkstyle.version>8.42</checkstyle.version>
     <testng.version>7.4.0</testng.version>
-
     <lombok.version>1.18.20</lombok.version>
-
     <aspectj.version>1.9.5</aspectj.version>
-    <selenium.version>3.141.59</selenium.version>
-
     <allure.version>2.14.0</allure.version>
+    <selenium-java.version>4.0.0</selenium-java.version>
+    <assertj-core.version>3.21.0</assertj-core.version>
+    <webdrivermanager.version>5.0.3</webdrivermanager.version>
 
     <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
+    <cucumber-java.version>7.0.0</cucumber-java.version>
   </properties>
 
   <profiles>
@@ -51,10 +51,28 @@
     <profile>
       <id>lesson04</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
         <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson04/lesson4.class.suite.xml</suite.xml.name>
+      </properties>
+    </profile>
+    <profile>
+      <id>lesson05-java-pure</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson05/lesson5.pure.java.suite.xml</suite.xml.name>
+      </properties>
+    </profile>
+    <profile>
+      <id>lesson05-cucumber</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson05/lesson5.cucumber.suite.xml</suite.xml.name>
       </properties>
     </profile>
   </profiles>
@@ -76,6 +94,38 @@
       <artifactId>allure-testng</artifactId>
       <version>${allure.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>${selenium-java.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assertj-core.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>${webdrivermanager.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>${cucumber-java.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-testng</artifactId>
+      <version>${cucumber-java.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -122,7 +172,7 @@
             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
           </argLine>
           <suiteXmlFiles>
-            <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
+            <suiteXmlFile>${suite.xml.name}</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
         <dependencies>
